--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <title>商城后台</title>
+  <link rel="stylesheet" href="css/reset.css">
 </head>
 
 <body>
